force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup all&apos;Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Individual Email Results</relationshipLabel>
    <relationshipName>Individual_Email_Results</relationshipName>
    <type>Lookup</type>
</CustomField>