force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity di Appuntamento</label>
    <referenceTo>wrts_prcgvr__Activity__c</referenceTo>
    <relationshipLabel>Individual Email Results</relationshipLabel>
    <relationshipName>Individual_Email_Results</relationshipName>
    <type>Lookup</type>
</CustomField>