force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/BounceSubCategory__c.field-meta.xml
<CustomField>
    <fullName>BounceSubCategory__c</fullName>
    <label>Tipologia Bounce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>