force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/CaseID__c.field-meta.xml
<CustomField>
    <fullName>CaseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Individual Email Results</relationshipLabel>
    <relationshipName>Individual_Email_Results</relationshipName>
    <type>Lookup</type>
</CustomField>