force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/DateTimeRef__c.field-meta.xml
<CustomField>
    <fullName>DateTimeRef__c</fullName>
    <label>Data ora riferimento comunicazione</label>
    <type>DateTime</type>
</CustomField>