force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Ordine</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Individual Email Results</relationshipLabel>
    <relationshipName>Individual_Email_Results</relationshipName>
    <type>Lookup</type>
</CustomField>